# pg_summarizer

./: .gitignore  README.md  pyproject.toml
notebooks/: pg_summarizer.ipynb  summarizer.ipynb
