[tool.poetry]
name = "pg-summarizer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
openai = "^1.17.1"
tqdm = "^4.66.2"
tenacity = "^8.2.3"
tiktoken = "^0.6.0"
scipy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
